Fixed z-index.

--- a/src/components/mgt-login/mgt-login.scss
+++ b/src/components/mgt-login/mgt-login.scss
@@ -58,6 +58,7 @@
   background: var(--popup-content-background-color);
   box-shadow: 0 12px 40px 2px rgba(0, 0, 0, 0.08);
   min-width: 240px;
+  z-index: 1;
 
   &.show-menu {
     display: block;
